--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,16 +1,63 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgb(51, 51, 51);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100vw;
+	background-color: rgb(51, 51, 51);
+}
+
+.card {
+	position: relative;
+    overflow: hidden;
+    margin: 0 15px;
+	height: 40vh;
+	background-position: center;
+	background-size: cover;
+    border-radius: 30px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.781);
+    z-index: 0;
 
 }
 
+.img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.438);
+    z-index: -1;
+}
+
+.text {
+    display: flex;
+    height: 100%;
+    padding: 10px 0;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    color: white;
+    z-index: 1;
+
+    p{
+        padding: 10px 20px;
+        text-align: justify;
+    }
+}
+
+.one {
+	background-image: url('https://cdn.pixabay.com/photo/2017/10/07/16/22/river-2826927_960_720.jpg');
+}
+
+.two {
+	background-image: url('https://cdn.pixabay.com/photo/2021/01/09/19/59/mountains-5903352_960_720.jpg');
+}
+
+.three {
+	background-image: url('https://cdn.pixabay.com/photo/2016/07/14/15/09/willow-1516877_960_720.jpg');
+}
