--- a/css/style.css
+++ b/css/style.css
@@ -24,16 +24,14 @@ body {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.781);
   z-index: 0;
 }
-
-.img {
+.card .img {
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.438);
   z-index: -1;
 }
-
-.text {
+.card .text {
   display: flex;
   height: 100%;
   padding: 10px 0;
@@ -43,7 +41,7 @@ body {
   color: white;
   z-index: 1;
 }
-.text p {
+.card .text p {
   padding: 10px 20px;
   text-align: justify;
 }
