--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,19 +16,18 @@ body {
 .card {
 	position: relative;
 	margin: 0 15px;
-	height: 40vh;
+	height: 60vh;
 	width: 350px;
-    background-position: center;
-    background-size: cover;
-    border-radius: 15px;
-    overflow: hidden;
-
-	// perspective: 800px;
+	border-radius: 15px;
+	perspective: 500px;
 
 	.img {
 		width: 100%;
 		height: 100%;
+		border-radius: 15px;
 		box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.781);
+		background-position: center;
+		background-size: cover;
 		transition: 0.8s;
 	}
 
@@ -39,38 +38,88 @@ body {
 		bottom: 0;
 		right: 0;
 		padding: 10px;
-        text-align: center;
-        background-image: linear-gradient(315deg, rgb(156, 156, 156) 0%, rgb(255, 224, 224) 74%);
-        transition: 0.8s;
-        opacity: 0;
+		text-align: center;
+		border-radius: 15px;
+		background-image: linear-gradient(
+			315deg,
+			rgb(156, 156, 156) 0%,
+			rgb(255, 224, 224) 74%
+		);
+		transition: 0.8s;
+		opacity: 0;
 
-        h3 {
-            margin-top: 250px;
-        }
+		h3 {
+			margin-top: 250px;
+		}
 	}
 }
 
 .one {
-
 	background-image: url('https://cdn.pixabay.com/photo/2017/10/07/16/22/river-2826927_960_720.jpg');
-
-	.text {
-		transform: rotateX(-180deg);
-	}
+}
+.text-one {
+	transform: rotateX(-180deg);
 }
 
 .two {
 	background-image: url('https://cdn.pixabay.com/photo/2021/01/09/19/59/mountains-5903352_960_720.jpg');
+}
 
-	.text {
-		transform: rotateY(-180deg);
-	}
+.text-two {
+	transform: rotateY(-180deg);
 }
 
 .three {
 	background-image: url('https://cdn.pixabay.com/photo/2016/07/14/15/09/willow-1516877_960_720.jpg');
 }
 
-.card:hover > .text {
+.card:hover .text {
 	transform: rotate(0);
+	opacity: 1;
+}
+
+.card:hover .one {
+	transform: rotateX(180deg);
+	opacity: 0;
+}
+.card:hover .two {
+	transform: rotateY(-180deg);
+	opacity: 0;
+}
+.card:hover .three {
+	animation: up 0.8s;
+}
+.card:hover .text-three {
+	animation: down 0.8s;
+}
+
+@keyframes up {
+	0% {
+		transform: translateY(0);
+		opacity: 1;
+	}
+	50% {
+		transform: translateY(-60%);
+	}
+
+	80% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+@keyframes down {
+	0% {
+		transform: translateY(0);
+		z-index: -1;
+	}
+	50% {
+		transform: translateY(60%);
+		z-index: -1;
+	}
+
+	100% {
+		z-index: 1;
+	}
 }
